Improve the exception when native access isn't enabled.